wp-content/themes/astra-child/style.css
/*
 Theme Name:   Astra Child
 Theme URI:    http://wpastra.com
 Description:  Custom Theme for Good Natured Nutrition
 Author:       Dan Hudson
 Template:     astra
 Version:      1.0.0
 License:      GNU General Public License v2 or later
 License URI:  http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain:  astra-child
*/

/*   the styles on this page are grouped according to the template the class appears on */

/************          SITE WIDE STYLES        ***************/

@font-face {
  font-family: glossandbloom;
  src: url(wp-content/themes/astra-child/assets/fonts/Gloss_And_Bloom.ttf);
}
html {
  font-size: 16px;
}

.body-content-container{
  background-color: white;
  max-width: 100%;
  margin-left: auto;
  margin-right: auto;
}

.content-container{
  background-color: white;
  max-width: 80%;
  margin-left: auto;
  margin-right: auto;
}

.hero-container{
  width: 100%;
  
}

.img-round{
  border-radius: 50%;
}

.scroll-down-divider {
  margin: 50px auto 50px auto;
}

.centered-content {
    margin-left: auto;
    margin-right: auto;
}

.green-dashed-divider{
  border-style: dashed;
  border-color: #CCD159;
  border-width: 2px;
  width: 80%;
  margin: 30px;
  margin-left: auto;
  margin-right: auto;
}
/************         HEADER AND NAVIGATION STYLES      ****************/
.site-header{
  background-color: #E7E7E7;
}
.desktop-title-bar {
  height: 122px;
  color: #2F5658;
  background-color: #E7E7E7;
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-around;
  align-items: center;
  margin-left: auto;
  margin-right: auto;
}
.desktop-title-bar__logo{
  max-height: 100%;
}
.header-consultations{
  border: 2px solid #407375;
  height: 3.12rem;
  box-sizing: border-box;
  display: flex;
}

.header-consultations__button{
	opacity: 0.5;
	color: #0C0033;
	font-family: 'Montserrat', sans-serif;
	font-size: 16px;
	line-height: 24px;
	text-align: center;
	background-color: transparent;
	margin: auto;
	max-height: 80%;
	width: 18.8rem;
}

.nav-container{
  background-color: #00AAAF;
  height: auto;
}
.navbar-nav{
  display: flex;
  justify-content: center;
  align-items: stretch;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}

.site-navigation__button{
  box-sizing: border-box;
  width: 10rem;
	font-family: 'Montserrat', sans-serif;
	font-size: 1.1rem;
	line-height: 1.5rem;
	color: white;
	text-align: center;
}
.navbar{
  border-radius: 0;
  margin: 0;
}
.navbar-nav > li > a:hover, .navbar-nav > li > a:focus {
  background-color: #CCD159;
  color: white;
}


/**********************************/
/*******  posts pages *************/
/**********************************/

.post-page-grid{
  margin: 10vh;
}
.post-page-grid-content{
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  max-width: 80%;
  margin: auto;
}
.post-tile__tile{
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.post-tile__tile a:hover, .post-tile__tile a:focus{
  text-decoration: none;
}
.post-tile__title{
	color: #0C0033;
	font-family: Average;
	font-size: 2.2rem;
	line-height: 2.6rem;
	text-align: center;  
	margin: 1rem;
}
.post-tile__img{
  height: 308px;
  width: 385px;
  overflow: hidden;
}

.post-tile__img wp-post-image{
  height: auto;
  width: 100%;
}
.blue-line {
  height: 5px;
  width: 100%;
  background-color: #2F5658;
}
/************************************/
/************************************/
/*********************************************************/
/************         ABOUT PAGE STYLES       ************/
/*********************************************************/
.about-hero-img__wrapper{
  min-height: 95vh;
}
.about-hero-image{
  width: 100%;
}
.about-blurb-divider{
  max-width: 80%;
  margin: 100px auto 100px auto;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  min-height: 50vh;
}

.about-blurb p{
  opacity: 0.5;
  font-family: Average, serif;
  font-size: 2rem;
  line-height: 3.3rem;
  text-align: center;
  color: #0C0033;
}
.about-janet-container{
  display: flex;
  justify-content: space-between;
  
  background-color: #E7E7E7;
}
.about-janet__text-box{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: baseline;
  max-width: 60%;
  padding: 50px 50px 50px 100px;
  flex-basis: 50%;
}
.about-janet__title{
  color: #2F5658;
  font-family: serif;
  font-size: 35px;
  line-height: 42px;
  margin-bottom: 1.5rem;
}
.about-janet__text{
  margin: 1rem;
  max-width: 70%;
}
.about-janet__text p{
  color: #0C0033;
  font-size: 17px;
  font-family: Average, serif;
}
.about-janet__image{
  flex-basis: 50%;
  display: flex;
}

.unsure-blurb-box{
  margin: 100px auto 100px auto;
  max-width: 70%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  align-content: baseline;
}
.unsure-blurb__text{
  color: #0C0033;
  text-align: center;
  font-family: Average, serif;
  font-size: 24px;
  margin-top: 1.75em;
}

.nutrition-consultations__wrapper{
  display: flex;
  background-color: #E7E7E7;
}
.nutrition-consultations__image-wrapper{
  flex-basis: 50%;
  height: 100%;
  width: 50%;
}
.nutrition-consultations__image{
  width: 50vw;
  height: 790px;
}
.nutrition-consultations__textbox{
  flex-basis: 50%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-content: center;
  padding: 50px 30px 50px 30px;
}
.nutrition-consultations__text-title{
	color: #2F5658;
	font-family: Average;
	font-size: 2rem;
	line-height: 2.6rem;
}
.long-underscore{
  height: 1px;
  width: 3em;
  border: 3px solid #2F5658;
}
.nutrition-consultations__text{
    color: #0C0033;
    font-size: 17px;
    font-family: Average, serif;
    max-width: 70%;
} 
.price-tile__container{
  height: 600px;
  display: flex;
  justify-content: space-around;
  align-items: center;
  align-content: center;
}
.price-tile__price{
  color: #CECECE;
  font-family: Clarendon;
  font-size: 100px;
  line-height: 97px;
	text-align: center;
}
.price-tile__title{
  color: #0C0033;
  font-size: 18px;
  line-height: 24px;
  text-align: center;
  font-family: 'Montserrat';
}
.price-tile__description{
	color: #0C0033;
	font-family: Clarendon;
	font-size: 17px;
	font-weight: 300;
	line-height: 32px;
	text-align: center;
}

/*-----------therapy section --> */
.therapy-benefits__container{
  height: 50rem;
  max-width: 50%;
  margin: 70px auto 70px auto;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}
.therapy-benefits__text{
	opacity: 0.5;
	color: #0C0033;
	font-family: Average;
	font-size: 2rem;
	line-height: 2.5rem;
	text-align: center;
}
.therapy-benefits__bullets{
  max-width: 50%;
  display: flex;
  justify-content: center;
}

.short-underscore{
  height: 1px;
  width: 3rem;
  border: 3px solid #2F5658;
}
.bullet-list li{
  font-size: 1.5rem;
  line-height: 2rem;
  color: #0C0033;
  margin: .8rem;
}
.about-nutritional-therapy__title{
	color: #2F5658;
	font-family: Average;
	font-size: 35px;
	line-height: 42px;
}

.nut-therapy-section{
  padding: 50px 0 50px 0;
  background-color: #E7E7E7;
}
.nut-therapy__wrapper{
  margin: 1.5rem;
  display: flex;
  justify-content: space-around;
}
.nut-therapy__text-wrapper{
  flex-basis: 60%; 
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}
.nut-therapy__title{
	color: #2F5658;
	font-family: Average;
	font-size: 35px;
	line-height: 42px;
}
.nut-therapy__text{
	color: #0C0033;
	font-family: Average;
	font-size: 17px;
	line-height: 32px;
}
.nut-therapy__image-box{
  flex: 0 0 20%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  
}

